--- a/MERN-Expense-Tracker-main/frontend/.env
+++ b/MERN-Expense-Tracker-main/frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL="https://bugdet-bee-server.vercel.app/?vercelToolbarCode=Uf_4PdG76r7tYEP"
+REACT_APP_API_URL="https://bugdet-bee.vercel.app/"
